--- a/src/Makefile.qt.include
+++ b/src/Makefile.qt.include
@@ -30,6 +30,15 @@ QT_TS = \
   qt/locale/paccoin_zh_CN.ts \
   qt/locale/paccoin_zh_TW.ts
 
+RES_FONTS = \
+  qt/res/fonts/VolteRounded-Regular.otf \
+  qt/res/fonts/VolteRounded-Bold.otf \
+  qt/res/fonts/VolteRounded-Light.otf \
+  qt/res/fonts/VolteRounded-Medium.otf \
+  qt/res/fonts/VolteRounded-Semibold.otf \
+  qt/res/fonts/Gotham-Medium.ttf \
+  qt/res/fonts/Gotham-Bold.otf
+
 QT_FORMS_UI = \
   qt/forms/addressbookpage.ui \
   qt/forms/askpassphrasedialog.ui \
@@ -563,6 +572,7 @@ RES_IMAGES = \
   qt/res/images/drkblue/unchecked_b_dis.png \
   qt/res/images/drkblue/checked_dis.png \
   qt/res/images/drkblue/unchecked_dis.png \
+  qt/res/images/drkblue/drkblue_walletFrame_bg.png \
   qt/res/images/crownium/about.png \
   qt/res/images/crownium/splash.png \
   qt/res/images/crownium/splash_testnet.png \
@@ -635,7 +645,7 @@ qt_libpaccoinqt_a_CPPFLAGS = $(AM_CPPFLAGS) $(BITCOIN_INCLUDES) $(BITCOIN_QT_INC
 qt_libpaccoinqt_a_CXXFLAGS = $(AM_CXXFLAGS) $(QT_PIE_FLAGS)
 
 qt_libpaccoinqt_a_SOURCES = $(BITCOIN_QT_CPP) $(BITCOIN_QT_H) $(QT_FORMS_UI) \
-  $(QT_QRC) $(QT_QRC_LOCALE) $(QT_TS) $(PROTOBUF_PROTO) $(RES_ICONS) $(RES_IMAGES) $(RES_CSS) $(RES_MOVIES)
+  $(QT_QRC) $(QT_QRC_LOCALE) $(QT_TS) $(PROTOBUF_PROTO) $(RES_ICONS) $(RES_FONTS) $(RES_IMAGES) $(RES_CSS) $(RES_MOVIES)
 
 nodist_qt_libpaccoinqt_a_SOURCES = $(QT_MOC_CPP) $(QT_MOC) $(PROTOBUF_CC) \
   $(PROTOBUF_H) $(QT_QRC_CPP) $(QT_QRC_LOCALE_CPP)
@@ -698,7 +708,7 @@ $(QT_QRC_LOCALE_CPP): $(QT_QRC_LOCALE) $(QT_QM)
 	  $(SED) -e '/^\*\*.*Created:/d' -e '/^\*\*.*by:/d' > $@
 	@rm $(@D)/temp_$(<F)
 
-$(QT_QRC_CPP): $(QT_QRC) $(QT_FORMS_H) $(RES_ICONS) $(RES_IMAGES) $(RES_CSS) $(RES_MOVIES) $(PROTOBUF_H)
+$(QT_QRC_CPP): $(QT_QRC) $(QT_FORMS_H) $(RES_ICONS) $(RES_FONTS) $(RES_IMAGES) $(RES_CSS) $(RES_MOVIES) $(PROTOBUF_H)
 	@test -f $(RCC)
 	$(AM_V_GEN) QT_SELECT=$(QT_SELECT) $(RCC) $(RCCFLAGS) -name paccoin $< | \
 	  $(SED) -e '/^\*\*.*Created:/d' -e '/^\*\*.*by:/d' > $@
